@@ -166,10 +166,13 @@ Version 1.8.0
 	* Nicholas Kraft's patch to fix some IPv6 copy/paste issues. He
 	reported to be getting infinite loops with the svn code.
 
+<<<<<<< HEAD
 2008-06-13 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* SF Bug Tracker [ 1984541 ]
 	ixmlDocumenttoString does not render the namespace tag.
 	Submitted By: Beliveau - belivo
+=======
+>>>>>>> c155d3c... Bug fix on M-SEARCH for IPv6 CPs.
 
 	Undoing the patch that fixed this problem. In fact, there was no
 	problem and the patch was wrong.
@@ -254,6 +257,14 @@ Version 1.8.0
 *******************************************************************************
 Version 1.6.15
 *******************************************************************************
+
+2012-01-11 Fabrice Fontaine <fabrice.fontaine(at)orange.com>
+
+	Bug fix on M-SEARCH for IPv6 CPs.
+
+	Small bug fix on IPv6 Control Point: now CP will also send M-SEARCH on
+	site-scope address (FF05::C) instead of only sending M-SEARCH on
+	link-scope (FF02::C).
 
 2012-01-04 Fabrice Fontaine <fabrice.fontaine(at)orange.com>
 
